--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -10,16 +10,18 @@ $themes: (
         orgTextColor: #222,
         orgBgColor: #efefef,
         selectedColor: #ccc,
-        lightBgColor: #eeeeee40
+        lightBgColor: #eeeeee40,
+        main:url("~/assets/background/main_light.png")
     ),
     dark: (
-        bgColor: #111111c0,
+        bgColor: #111111e0,
         textColor: #cccccc,
         fullBarColor: $redColor,
         orgTextColor: #eeeeee,
         orgBgColor: #222,
         selectedColor: #333,
-        lightBgColor: #11111140
+        lightBgColor: #11111140,
+        main:url("~/assets/background/main_dark.png")
     )
 );
 
