--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,6 @@
 $pinkColor: #f595bb;
 $redColor: #c70c0c;
-$yellowColor:#F5F2E9;
+$yellowColor: #f5f2e9;
 // scss variable control theme switching
 $themes: (
     light: (
@@ -9,9 +9,9 @@ $themes: (
         fullBarColor: $pinkColor,
         orgTextColor: #222,
         orgBgColor: $yellowColor,
-        selectedColor: #E4E1D8,
+        selectedColor: #e4e1d8,
         lightBgColor: #eeeeee40,
-        main:url("~/assets/background/main_light.png")
+        main: url("~/assets/background/main_light.png")
     ),
     dark: (
         bgColor: #111111f0,
@@ -21,7 +21,7 @@ $themes: (
         orgBgColor: #222,
         selectedColor: #333,
         lightBgColor: #11111140,
-        main:url("~/assets/background/main_dark.png")
+        main: url("~/assets/background/main_dark.png")
     )
 );
 
